--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -609,6 +609,7 @@ button {
   display: inline-flex;
   align-items: center;
   text-align: center;
+  text-decoration: none;
   white-space: nowrap;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -626,8 +627,17 @@ button {
   border: 1px solid var(--border-color-main);
   border-radius: 4px;
   color: white;
-  background: #1665d8;
   cursor: pointer;
+}
+
+button.danger {
+  background: #e6492d;
+}
+button.primary {
+  background: #1665d8;
+}
+button.success {
+  background: #38b249;
 }
 
 @media only screen and (max-width: 480px) {
