--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -695,6 +695,31 @@ button:focus {
   position: relative;
 }
 
+/* ::::::::::::::: START CSSTransitions styles ::::::::::::::: */
+
+.roll-appear {
+  opacity: 0;
+}
+.roll-enter {
+  opacity: 0;
+}
+.roll-enter-done {
+  transform: translateY(300px);
+  opacity: 1;
+  transition: transform 1000ms, opacity 1000ms;
+}
+.roll-exit {
+  transform: translateY(300px);
+  opacity: 1;
+}
+.roll-exit-active {
+  transform: translateY(0);
+  opacity: 0;
+  transition: transform 1000ms, opacity 1000ms;
+}
+
+/* ::::::::::::::: END CSSTransitions styles ::::::::::::::: */
+
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
