--- a/src/scss/bootstrap.scss
+++ b/src/scss/bootstrap.scss
@@ -2,7 +2,7 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "variables";
-@import "../../node_modules/bootstrap/scss/mixins.scss";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
 //Components
 @import "components/accordions";
