--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,6 +21,8 @@
 @import "structure/footer";
 /* 7. Own Resets */
 @import "structure/resets";
+/* 8. Custom styles */
+@import "structure/custom-styles";
 /* 9. Layouts */
 @import "structure/layouts";
 
