--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,113 +1,142 @@
-// 
+//
 // buttons.scss
 //
 
 .btn {
-    color: $white;
-    
+  color: $white;
 
-    &:focus {
-        box-shadow: none;
-    }
+  &:focus {
+    box-shadow: none;
+  }
 
-    .icon {
-        svg {
-            width: 1rem;
-            height: 1rem;
-            margin-left: 0.1rem;
-            margin-top: -2px;
-        }
+  .icon {
+    svg {
+      width: 1rem;
+      height: 1rem;
+      margin-left: 0.1rem;
+      margin-top: -2px;
     }
+  }
 }
 
 .btn-rounded {
-    border-radius: 2em;
+  border-radius: 2em;
+}
+
+//
+// Buttons circle
+//
+
+.btn-circle {
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  text-align: center;
+  padding: 0;
+  border-radius: 50% !important;
+  svg {
+    position: relative;
+    top: -1px;
+  }
+}
+
+.btn-circle-sm {
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
+  font-size: 0.9rem;
+}
+
+.btn-circle-lg {
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  font-size: 1.1rem;
 }
 
 //
 // light button
-// 
-.btn-light,.btn-white {
-    color: $gray-900;
+//
+.btn-light,
+.btn-white {
+  color: $gray-900;
 }
 
 .btn-white {
-    border-color: $gray-300;
+  border-color: $gray-300 !important;
 
-    @include hover-focus {
-        background-color: $gray-300;
-        border-color: $gray-400;
-    }
+  @include hover-focus {
+    background-color: $gray-300;
+    border-color: $gray-400;
+  }
 }
 //
 // Link buttons
 //
 // Make a button look and behave like a link
 .btn-link {
-    font-weight: $font-weight-normal;
-    color: $link-color;
+  font-weight: $font-weight-normal;
+  color: $link-color;
+  background-color: transparent;
+  @include hover {
+    color: $link-hover-color;
+    text-decoration: $link-hover-decoration;
     background-color: transparent;
-    @include hover {
-        color: $link-hover-color;
-        text-decoration: $link-hover-decoration;
-        background-color: transparent;
-        border-color: transparent;
-    }
-    &:focus,
-    &.focus {
-        text-decoration: $link-hover-decoration;
-        border-color: transparent;
-        box-shadow: none;
-    }
-    &:disabled,
-    &.disabled {
-        color: $btn-link-disabled-color;
-        pointer-events: none;
-    } // No need for an active state here
-} 
+    border-color: transparent;
+  }
+  &:focus,
+  &.focus {
+    text-decoration: $link-hover-decoration;
+    border-color: transparent;
+    box-shadow: none;
+  }
+  &:disabled,
+  &.disabled {
+    color: $btn-link-disabled-color;
+    pointer-events: none;
+  } // No need for an active state here
+}
 
-
-// 
+//
 // Button Extra Small Size
-// 
+//
 
 .btn-xs {
-    padding: .2rem .6rem;
-    font-size: .75rem;
-    border-radius: .15rem;
+  padding: 0.2rem 0.6rem;
+  font-size: 0.75rem;
+  border-radius: 0.15rem;
 }
 
 // Soft variants
 @mixin btn-variant-soft($bg, $color) {
-    background-color: rgba($bg, $btn-soft-bg-opacity);
+  background-color: rgba($bg, $btn-soft-bg-opacity);
+  color: $color;
+  border-color: rgba($color, $btn-soft-bg-opacity);
+
+  &:focus {
+    box-shadow: none;
+  }
+
+  @include hover-focus {
+    background-color: fade-in(rgba($bg, $btn-soft-bg-opacity), 0.05);
     color: $color;
-    border-color: rgba($color, $btn-soft-bg-opacity);
-
-    &:focus {
-        box-shadow: none;
-    }
-
-    @include hover-focus {
-        background-color: fade-in(rgba($bg, $btn-soft-bg-opacity), .05);
-        color: $color;
-    }
+  }
 }
 
 @each $color, $value in $theme-colors {
-    .btn-soft-#{$color} {
-        @include btn-variant-soft($value, $value);
-    }
+  .btn-soft-#{$color} {
+    @include btn-variant-soft($value, $value);
+  }
 }
 
 //
 // Alternate buttons
 //
-@each $color,
-$value in $theme-colors {
-    .btn-outline-#{$color} {
-        @include button-outline-variant($value);
-        &:focus {
-            box-shadow: none;
-        }
+@each $color, $value in $theme-colors {
+  .btn-outline-#{$color} {
+    @include button-outline-variant($value);
+    &:focus {
+      box-shadow: none;
     }
+  }
 }
