--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -41,3 +41,7 @@
 @import "components/print";
 /* 16. Preloader */
 @import "components/preloader";
+
+// Plugins
+/* 17. Plugins */
+@import "plugins/calendar";
